Add /teams/scores to update scores
